Updates webform button and prevents image from floating on mobile

--- a/styleguide/source/assets/scss/03-organisms/_sales-landing-page-hero.scss
+++ b/styleguide/source/assets/scss/03-organisms/_sales-landing-page-hero.scss
@@ -11,6 +11,11 @@
 
   .ama__image {
     border: 1px solid $gray-20;
+    float: none;
+
+    @include breakpoint($bp-small) {
+      float: right;
+    }
   }
 
   &__content {
