--- a/styleguide/source/assets/scss/05-pages/_sales-landing-page.scss
+++ b/styleguide/source/assets/scss/05-pages/_sales-landing-page.scss
@@ -19,6 +19,12 @@
     }
   }
 
+.webform-button--submit {
+  @include breakpoint($bp-small min-width) {
+    width: 50%;
+  }
+}
+
   &__form {
     @include gutter($padding-top-full...);
     @include gutter($margin-bottom-full...);
